# proqnt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
proptest-regressions/: fractional.txt  lib.txt
proptest-regressions/fractional/: mod.txt
src/: lib.rs  proquint.rs
src/fractional/: ints.rs  mod.rs
