[package]
name = "proqnt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
proptest = "1.1"