[package]
name = "proqnt"
version = "0.1.0"
edition = "2021"
authors = ["Jad Ghalayini <jeg74@cl.cam.ac.uk>"]
description = "Zero-copy proquint encoding and decoding"
repository = "https://github.com/imbrem/proqnt"
license = "0BSD or MIT or Apache-2.0"
keywords = ["proquint", "zero-copy"]
categories = ["no-std", "encoding", "parser-implementations", "value-formatting"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
proptest = "1.1"